vlib/v/parser/tests/embed_file_evaluated_but_not_used_before_newline_index_result.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_before_newline_index_result.vv:7:4: error: expression evaluated but not used
    5 |     _ := if outer {
    6 |         if cond {
    7 |             $embed_file(@FILE)
      |             ~~~~~~~~~~~~~~~~~~
    8 |         } else {
    9 |             fallback
