vlib/v/parser/tests/embed_file_evaluated_but_not_used_before_newline_index_result.vv
fn main() {
	outer := true
	cond := true
	fallback := $embed_file(@FILE)
	_ := if outer {
		if cond {
			$embed_file(@FILE)
		} else {
			fallback
		}
		[0]
	} else {
		[1]
	}
}
